Move index.html in root directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Bombdrops</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="./dist/index.css" />
         <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
 
@@ -18,7 +18,7 @@
                 <h1 id='logo_h1'>
                     BombDrops
                 </h1>
-                <img id='bomb_gif' src="../image_resource/bomb.gif" alt="">
+                <img id='bomb_gif' src="./image_resource/bomb.gif" alt="">
                 <br/>
                 <input id='player_name_input' type="text" placeholder="Enter Name">
                 <br/>
@@ -52,6 +52,6 @@
 
         <canvas id='bombdropsAnimation'><button id='start_game_btn'>Start Game</button></canvas>
     
-        <script type="application/javascript" src="./main.js"></script>
+        <script type="application/javascript" src="./dist/main.js"></script>
     </body>
 </html>
