Modify css and improve UI and UX

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <br />
                 <button id='reduce_speed_btn' >Slow Down</button>
                 <button id='increase_speed_btn' >Speed Up</button>
-                <p style="color:aliceblue; margin-top:30px; margin-left: -30px;">Increase speed to gain more score per bomb</p>
+                <p style="color:aliceblue; margin-top:30px;">Increase speed to gain more score per bomb</p>
                 
                
             </div> 
