Modify score board UI

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
             <h1 id= "your_score">Your Score</h1>
             <h2 id="my_score"></h2>
             <br />
-            <h1 id="top_10_scores">Top 10 Score Board</h1>
-            <ul id='score_list'></ul>
+            <div id="score_board">
+                <h1 id="top_10_scores">Top 10 Score Board</h1> <hr />
+                <ul id='score_list'></ul>
+            </div>
         </div>
 
         <canvas id='bombdropsAnimation'><button id='start_game_btn'>Start Game</button></canvas>
