Modify score board

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2 id="my_score"></h2>
             <br />
             <div id="score_board">
-                <h1 id="top_10_scores">Top 10 Score Board</h1> <hr />
+                <h1 id="top_10_scores">👑 Top 10 Score Board 👑</h1> <hr />
                 <ul id='score_list'></ul>
             </div>
         </div>
