--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" href="image_resource/favicon.jpg"/>
 
 
     </head>
