Adjust before_game page to more accurate info

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li>☛ Every bomb worths 1,000 points after game starts</li>
                     <li>☛ Increasing speed gives you more points (speed x 1,000 pts) for every bomb</li>
                     <li>☛ Intuitively, the slow-down button gives you less points but more flexibility</li>
-                    <li>☛ Allow to miss 4 bombs but with speed 2 or higher allows more missing bombs</li>
+                    <li>☛ Allow to miss 4 bombs but with speed 2.75 or higher allows 5 missing bombs</li>
                 </ul>
                 <h3 id="copy_right">Copyright Ⓒ 2019 BombDrops by Nero Chen</h3>
 
