--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <br/>
                 <button id='start_game_btn'>Start Game</button>
                 <ul id="instruction_list">
-                    <li>☛ Every bomb worths 1,000 points after game starts</li>
+                    <li>☛ Every bomb worths 1,500 points after game starts since initial speed is 1.5</li>
                     <li>☛ Increasing speed gives you more points (speed x 1,000 pts) for every bomb</li>
                     <li>☛ Intuitively, the slow-down button gives you less points but more flexibility</li>
                     <li>☛ Allow to miss 4 bombs but with speed 2.75 or higher allows 5 missing bombs</li>
