Add github and linkedin icons with attached links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
                     <li>☛ Allow to miss 4 bombs but with speed 2.75 or higher allows 5 missing bombs</li>
                 </ul>
                 <h3 id="copy_right">Copyright Ⓒ 2019 BombDrops by Nero Chen</h3>
-
+                <div id="github-linkedin" style="padding-top: 19px;
+                margin-bottom: -50px;"> 
+                        <p style="color: #f7b45a">Visit my Github and LinkedIn below</p>
+                        <a id="github" href="https://github.com/nerochen25">
+                          <img id="github-logo" src="https://img.icons8.com/metro/1600/github.png"/>
+                        </a>
+                        <a id="linkedin" href="https://www.linkedin.com/in/nerochen25">
+                          <img id="linkedin-logo" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png"/>
+                        </a>
+                </div>
             </div>
             <br/>
             <div id='game_begin'>
@@ -62,6 +71,16 @@
             <div id="score_board">
                 <h1 id="top_10_scores">👑 Top 10 Score Board 👑</h1> <hr />
                 <ul id='score_list'></ul>
+            </div>
+            <div id="github-linkedin" style="padding-top: 19px;
+                margin-bottom: -50px;"> 
+                        <p style="color: #f7b45a">Visit my Github and LinkedIn below</p>
+                        <a id="github" href="https://github.com/nerochen25">
+                          <img id="github-logo" src="https://img.icons8.com/metro/1600/github.png"/>
+                        </a>
+                        <a id="linkedin" href="https://www.linkedin.com/in/nerochen25">
+                          <img id="linkedin-logo" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png"/>
+                        </a>
             </div>
         </div>
 
