Modify logo in case user uses Safari

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="player_name_div">
             <div id='before_game'>
                 <h1 id='logo_h1'>
-                    BombDrops
+                    Bomb  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Drops
                 </h1>
                 <img id='bomb_gif' src="./image_resource/bomb.gif" alt="">
                 <br/>
