--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
                     <li>☛ Intuitively, the slow-down button gives you less points but more flexibility</li>
                     <li>☛ Allow to miss 4 bombs but with speed 2.75 or higher allows 5 missing bombs</li>
                 </ul>
-                <h3 id="copy_right">Copyright Ⓒ 2019 BombDrops by Nero Chen</h3>
-                <div id="github-linkedin" style="padding-top: 19px;
-                margin-bottom: -50px;"> 
-                        <p style="color: #f7b45a">Visit my Github and LinkedIn below</p>
+                <div id="github-linkedin"> 
+                        <p class='visit_me' style="color: #397e95">Visit my Github and LinkedIn below</p>
                         <a id="github" href="https://github.com/nerochen25">
                           <img id="github-logo" src="https://img.icons8.com/metro/1600/github.png"/>
                         </a>
@@ -44,6 +42,8 @@
                           <img id="linkedin-logo" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png"/>
                         </a>
                 </div>
+                <h3 id="copy_right">Copyright Ⓒ 2019 BombDrops by Nero Chen</h3>
+
             </div>
             <br/>
             <div id='game_begin'>
@@ -72,8 +72,7 @@
                 <h1 id="top_10_scores">👑 Top 10 Score Board 👑</h1> <hr />
                 <ul id='score_list'></ul>
             </div>
-            <div id="github-linkedin" style="padding-top: 19px;
-                margin-bottom: -50px;"> 
+            <div id="github-linkedin" style="padding-top:150px;" > 
                         <p style="color: #f7b45a">Visit my Github and LinkedIn below</p>
                         <a id="github" href="https://github.com/nerochen25">
                           <img id="github-logo" src="https://img.icons8.com/metro/1600/github.png"/>
@@ -82,6 +81,7 @@
                           <img id="linkedin-logo" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png"/>
                         </a>
             </div>
+            <h3 id="copy_right_on_board_page">Copyright Ⓒ 2019 BombDrops by Nero Chen</h3>
         </div>
 
         <canvas id='bombdropsAnimation'><button id='start_game_btn'>Start Game</button></canvas>
