Add restart game btn on the board page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                 <h1 id="top_10_scores">👑 Top 10 Score Board 👑</h1> <hr />
                 <ul id='score_list'></ul>
             </div>
-            <div id="github-linkedin" style="padding-top:150px;" > 
+            
+            <button id='restart_game_btn' onClick="window.location.reload()">Restart game</button>
+
+
+            <div id="github-linkedin" > 
                         <p style="color: #f7b45a">Visit my Github and LinkedIn below</p>
                         <a id="github" href="https://github.com/nerochen25">
                           <img id="github-logo" src="https://img.icons8.com/metro/1600/github.png"/>
