Modify the instruction info

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                 <br/>
                 <button id='start_game_btn'>Start Game</button>
                 <ul id="instruction_list">
-                    <li>☛ Every bomb worths 1,500 points after game starts since initial speed is 1.5</li>
-                    <li>☛ Increasing speed gives you more points (speed x 1,000 pts) for every bomb</li>
-                    <li>☛ Intuitively, the slow-down button gives you less points but more flexibility</li>
-                    <li>☛ Allow to miss 4 bombs but with speed 2.75 or higher allows 5 missing bombs</li>
+                    <li>☛ Initial speed is 1.5 after game starts</li>
+                    <li>☛ Formula for point system: (speed x 1,000 pts)</li>
+                    <li>☛ Allows 4 missing bombs with speed from 1 to 2.5</li>
+                    <li>☛ Allows 5 missing bombs with speed from 2.75 to 3.25</li>
+                    <li>☛ Allows 6 missing bombs with highest speed, 3.5</li>
                 </ul>
                 <div id="github-linkedin"> 
                         <p class='visit_me' style="color: #397e95">Visit my Github and LinkedIn below</p>
@@ -52,8 +53,8 @@
                 <button id='reduce_speed_btn' >Slow Down</button>
                 <button id='increase_speed_btn' >Speed Up</button>
                 <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
-                    <li>Min speed: 0.5</li>
-                    <li>Max speed: 3.0</li>
+                    <li>Min speed: 1.0</li>
+                    <li>Max speed: 3.5</li>
                 </ul>
             
                
