Disappear the slowdown and speedup buttons

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <div id='game_begin'>
                 <input id='solution_input' type="number" >
                 <br />
-                <button id='reduce_speed_btn' >Slow Down</button>
-                <button id='increase_speed_btn' >Speed Up</button>
-                <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
+                <button id='reduce_speed_btn' style="display: none">Slow Down</button>
+                <button id='increase_speed_btn' style="display: none">Speed Up</button>
+                <!-- <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
                     <li>Min speed: 1.0</li>
                     <li>Max speed: 3.5</li>
-                </ul>
+                </ul> -->
             
                
             </div> 
