Fix the the undisplayable background image

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 <br />
                 <button id='reduce_speed_btn' style="display: none">Slow Down</button>
                 <button id='increase_speed_btn' style="display: none">Speed Up</button>
-                <!-- <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
-                    <li>Min speed: 1.0</li>
-                    <li>Max speed: 3.5</li>
-                </ul> -->
+                <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
+                    <li>1,500 points per bomb</li>
+                    <li>Game over when missing 4 bombs</li>
+                </ul>
             
                
             </div> 
