Add two messages on the play page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <button id='increase_speed_btn' style="display: none">Speed Up</button>
                 <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
                     <li>1,500 points per bomb</li>
-                    <li>Game over when missing 4 bombs</li>
+                    <li>Game over after missing 4 bombs</li>
                 </ul>
             
                
