Delete border line for canvas

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h3 id="copy_right_on_board_page">Copyright Ⓒ 2019 BombDrops by Nero Chen</h3>
         </div>
 
-        <canvas id='bombdropsAnimation' style="border-bottom: 1px solid black;"><button id='start_game_btn'>Start Game</button></canvas>
+        <canvas id='bombdropsAnimation'><button id='start_game_btn'>Start Game</button></canvas>
     
         <script type="application/javascript" src="./dist/main.js"></script>
     </body>
