Delete the point message and make the missing bomb message larger

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 <button id='reduce_speed_btn' style="display: none">Slow Down</button>
                 <button id='increase_speed_btn' style="display: none">Speed Up</button>
                 <ul style="color:aliceblue; margin-top:30px;font-size:16pt">
-                    <li>1,500 points per bomb</li>
-                    <li>Game over after missing 4 bombs</li>
+                    <li><h2>Game over after missing 4 bombs</h2></li>
                 </ul>
             
                
